--- a/scss/_project.scss
+++ b/scss/_project.scss
@@ -20,28 +20,23 @@
 }
 
 // Button Styles
-.btn {
+.btn-dark {
   display: block;
   text-align: center;
   padding: 0.7rem 0.7rem;
-  border: 0;
+  background: darken($primary-color, 40);
+  color: #fff;
+  border-radius: 50px;
+  border: 1.4px #fff solid;
   margin-top: 0.5rem;
   margin-bottom: 0.6rem;
   -webkit-box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.8);
   box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.8);
+  @include easeOut;
 
   &:hover {
     background: $secondary-color;
     color: set-text-color($secondary-color);
   }
-}
-
-.btn-dark {
-  @extend .btn;
-  background: darken($primary-color, 40);
-  color: #fff;
-  border-radius: 50px;
-  border: 1.4px #fff solid;
-  @include easeOut;
 }
