--- a/scss/_responsive_changes.scss
+++ b/scss/_responsive_changes.scss
@@ -1,177 +1,3 @@
-@include mediaOne {
-  .contact-info {
-    grid-gap: 1rem;
-    font-size: 1.3rem;
-  }
-
-  .email-box,
-  .linkedin-box,
-  .twitter-box {
-    &:hover {
-      padding: 2rem 3.4rem;
-    }
-  }
-}
-
-@include mediaTwo {
-  .contact-info {
-    grid-gap: 0.7rem;
-    font-size: 1rem;
-  }
-
-  .email-box,
-  .linkedin-box,
-  .twitter-box {
-    &:hover {
-      padding: 1.7rem 3rem;
-    }
-  }
-}
-
-@include mediaThree {
-  .contact-info {
-    grid-gap: 1.7rem;
-    font-size: 1rem;
-    grid-template-columns: repeat(4, auto);
-  }
-  .email-box {
-    grid-column: 1 / span 2;
-  }
-
-  .linkedin-box {
-    grid-column: 2 / span 2;
-  }
-
-  .twitter-box {
-    grid-column: 3 / span 2;
-  }
-
-  .email-box,
-  .linkedin-box,
-  .twitter-box {
-    &:hover {
-      padding: 1.7rem 4.7rem;
-    }
-  }
-}
-
-@include mediaFour {
-  .contact-info {
-    grid-gap: 1.5rem;
-    font-size: 1rem;
-    grid-template-columns: repeat(4, auto);
-  }
-  .email-box {
-    grid-column: 1 / span 2;
-  }
-
-  .linkedin-box {
-    grid-column: 2 / span 2;
-  }
-
-  .twitter-box {
-    grid-column: 3 / span 2;
-  }
-
-  .email-box,
-  .linkedin-box,
-  .twitter-box {
-    &:hover {
-      padding: 1.5rem 4.3rem;
-    }
-  }
-}
-
-@include mediaFive {
-  .contact-info {
-    grid-gap: 1.8rem;
-    font-size: 1rem;
-    grid-template-columns: repeat(7, auto);
-  }
-  .email-box {
-    grid-column: 1 / span 5;
-  }
-
-  .linkedin-box {
-    grid-column: 2 / span 5;
-  }
-
-  .twitter-box {
-    grid-column: 3 / span 5;
-  }
-
-  .email-box,
-  .linkedin-box,
-  .twitter-box {
-    &:hover {
-      padding: 2rem 7rem;
-    }
-  }
-}
-
-@include mediaSix {
-  .contact-info {
-    grid-gap: 1rem;
-    font-size: 1rem;
-    grid-template-columns: repeat(7, auto);
-  }
-  .email-box {
-    grid-column: 1 / span 5;
-    &:hover {
-      padding: 1.75rem 6.5rem;
-    }
-  }
-
-  .linkedin-box {
-    grid-column: 2 / span 5;
-    &:hover {
-      padding: 1.75rem 6rem;
-    }
-  }
-
-  .twitter-box {
-    grid-column: 3 / span 5;
-    &:hover {
-      padding: 1.75rem 8rem;
-    }
-  }
-}
-
-@include mediaSeven {
-  .contact-info {
-    grid-gap: 1.5rem;
-    font-size: 1rem;
-    grid-template-columns: repeat(10, auto);
-  }
-  .email-box {
-    grid-column: 1 / span 8;
-    &:hover {
-      padding: 1.75rem 7rem;
-    }
-  }
-
-  .linkedin-box {
-    grid-column: 2 / span 8;
-    &:hover {
-      padding: 1.75rem 6.5rem;
-    }
-  }
-
-  .twitter-box {
-    grid-column: 3 / span 8;
-    &:hover {
-      padding: 1.75rem 8.5rem;
-    }
-  }
-
-  // .email-box,
-  // .linkedin-box,
-  // .twitter-box {
-  //   &:hover {
-  //     padding: 1.8rem 7.5rem;
-  //   }
-  // }
-}
 // @include mediaLg {
 //   main {
 //     .lg-heading {
@@ -279,14 +105,14 @@
 //     grid-template-columns: repeat(2, 1fr);
 //   }
 
-// .contact-info {
-//   grid-template-areas:
-//     "box-1"
-//     "box-2"
-//     "box-3";
+//   .contact-info {
+//     grid-template-areas:
+//       "box-1"
+//       "box-2"
+//       "box-3";
 
-//   grid-template-columns: 1fr;
-// }
+//     grid-template-columns: 1fr;
+//   }
 // }
 
 // @include mediaSm {
@@ -303,5 +129,50 @@
 //   }
 //   .projects {
 //     grid-template-columns: 1fr;
+//   }
+// }
+
+// @include mediaOne {
+//   .contact-info {
+//     grid-gap: 1rem;
+//     font-size: 1rem;
+//   }
+
+//   .email-box,
+//   .linkedin-box,
+//   .twitter-box {
+//     &:hover {
+//       padding: 2rem 2.5rem;
+//     }
+//   }
+// }
+
+// @include mediaTwo {
+//   .contact-info {
+//     grid-gap: 1rem;
+//     font-size: 1rem;
+//   }
+
+//   .email-box {
+//     grid-column: 1 / span 14;
+//   }
+
+//   .linkedin-box {
+//     grid-column: 9 / span 14;
+//   }
+
+//   .twitter-box {
+//     grid-column: 17 / span 14;
+
+//     &:hover {
+//       padding: 2rem 5rem;
+//     }
+//   }
+
+//   .email-box,
+//   .linkedin-box {
+//     &:hover {
+//       padding: 2rem 3rem;
+//     }
 //   }
 // }
